force-app/main/default/objects/Versement_OCTA__c/Versement_OCTA__c.object-meta.xml
<CustomObject>
    <label>Versement OCTA</label>
    <nameField>
        <displayFormat>VT# {00000000}</displayFormat>
        <label>Numéro versement OCTA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Versements OCTA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>