force-app/main/default/objects/Versement_OCTA__c/fields/Banque__c.field-meta.xml
<CustomField>
    <fullName>Banque__c</fullName>
    <label>Banque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRED - Banque Populaire</fullName>
            </value>
            <value>
                <fullName>BNP PARIBAS</fullName>
            </value>
            <value>
                <fullName>BANQUE POPULAIRE</fullName>
            </value>
            <value>
                <fullName>BTP BANQUE</fullName>
            </value>
            <value>
                <fullName>CREDIT AGRICOLE</fullName>
            </value>
            <value>
                <fullName>CREDIT COOPERATIF</fullName>
            </value>
            <value>
                <fullName>CAISSE D&apos;EPARGNE</fullName>
            </value>
            <value>
                <fullName>CIC</fullName>
            </value>
            <value>
                <fullName>CREDIT MUTUEL</fullName>
            </value>
            <value>
                <fullName>CREDIT DU NORD</fullName>
            </value>
            <value>
                <fullName>HERVET</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>LCL - CREDIT LYONNAIS</fullName>
            </value>
            <value>
                <fullName>LYONNAISE DE BANQUE</fullName>
            </value>
            <value>
                <fullName>Banque MARTIN MAUREL</fullName>
            </value>
            <value>
                <fullName>LA BANQUE POSTALE</fullName>
            </value>
            <value>
                <fullName>BANQUE SCALBERT DUPONT</fullName>
            </value>
            <value>
                <fullName>SOCIETE GENERALE</fullName>
            </value>
            <value>
                <fullName>AUTRE</fullName>
            </value>
            <value>
                <fullName>BANQUE DE LA REUNION</fullName>
            </value>
            <value>
                <fullName>BANQUE TARNEAUD</fullName>
            </value>
            <value>
                <fullName>NEUFLIZE OBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>