force-app/main/default/objects/Versement_OCTA__c/fields/Collecte__c.field-meta.xml
<CustomField>
    <fullName>Collecte__c</fullName>
    <label>Collecte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMLYON</fullName>
                <default>true</default>
                <label>EMLYON</label>
            </value>
            <value>
                <fullName>St Etienne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>