force-app/main/default/objects/Versement_OCTA__c/fields/Compte_Versement_OCTA__c.field-meta.xml
<CustomField>
    <fullName>Compte_Versement_OCTA__c</fullName>
    <label>Compte</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Est_un_OCTA__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Versements OCTA</relationshipLabel>
    <relationshipName>Versements_OCTA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>