force-app/main/default/objects/Versement_OCTA__c/fields/D_tail_banque__c.field-meta.xml
<CustomField>
    <fullName>D_tail_banque__c</fullName>
    <label>Détail banque</label>
    <length>50</length>
    <type>Text</type>
</CustomField>