force-app/main/default/objects/Versement_OCTA__c/fields/Date_de_la_piece__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_piece__c</fullName>
    <label>Date de la pièce</label>
    <type>Date</type>
</CustomField>