force-app/main/default/objects/Versement_OCTA__c/fields/Date_de_versement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_versement__c</fullName>
    <label>Date de chèque/virement</label>
    <type>Date</type>
</CustomField>