force-app/main/default/objects/Versement_OCTA__c/fields/Exercice_Collecte__c.field-meta.xml
<CustomField>
    <fullName>Exercice_Collecte__c</fullName>
    <defaultValue>TEXT(YEAR( DATEVALUE( Now()) ))</defaultValue>
    <description>Exercice de collecte</description>
    <inlineHelpText>Exercice de collecte</inlineHelpText>
    <label>Exercice Collecte</label>
    <length>4</length>
    <type>Text</type>
</CustomField>