force-app/main/default/objects/Versement_OCTA__c/fields/Exercice_de_collecte__c.field-meta.xml
<CustomField>
    <fullName>Exercice_de_collecte__c</fullName>
    <formula>TEXT(YEAR( DATEVALUE( CreatedDate ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exercice de collecte</label>
    <type>Text</type>
</CustomField>