force-app/main/default/objects/Versement_OCTA__c/fields/Montant_net__c.field-meta.xml
<CustomField>
    <fullName>Montant_net__c</fullName>
    <label>Montant net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>