force-app/main/default/objects/Versement_OCTA__c/fields/Nature_versement__c.field-meta.xml
<CustomField>
    <fullName>Nature_versement__c</fullName>
    <label>Nature versement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Virement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>