force-app/main/default/objects/Versement_OCTA__c/fields/Num_ro_du_ch_que__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_du_ch_que__c</fullName>
    <label>Numéro du chèque</label>
    <length>10</length>
    <type>Text</type>
</CustomField>