force-app/main/default/objects/Versement_OCTA__c/fields/Num_ro_versement__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_versement__c</fullName>
    <label>Numéro versement (interne)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>