force-app/main/default/objects/Versement_OCTA__c/fields/Numero_de_suivi__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_suivi__c</fullName>
    <label>Numéro de suivi</label>
    <length>80</length>
    <type>Text</type>
</CustomField>