force-app/main/default/objects/Versement_OCTA__c/fields/Octa_Montant_B__c.field-meta.xml
<CustomField>
    <fullName>Octa_Montant_B__c</fullName>
    <label>Montant B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>