force-app/main/default/objects/Versement_OCTA__c/fields/Type_de_versement__c.field-meta.xml
<CustomField>
    <fullName>Type_de_versement__c</fullName>
    <label>Type de versement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barème OCTA</fullName>
            </value>
            <value>
                <fullName>Fond CCI</fullName>
            </value>
            <value>
                <fullName>Fond Libre Subvention</fullName>
            </value>
            <value>
                <fullName>Fond Libre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>